Add pointer to repo

--- a/_posts/2018-04-22-ecodays.md
+++ b/_posts/2018-04-22-ecodays.md
@@ -4,7 +4,7 @@ title: "EcoDays: a calendar of environmental holidays built on Github Pages and 
 date: 2018-04-22 14:30
 ---
 
-In honor of Earth Day, I thought I'd try something a little different for my newest API. This API is a calendar of environmental holidays, paired with a React app which displays them in chronological order. The result is a handy little app I call [EcoDays](https://shaisachs.github.io/ecodays/).
+In honor of Earth Day, I thought I'd try something a little different for my newest API. This API is a calendar of environmental holidays, paired with a React app which displays them in chronological order. The result is a handy little app I call [EcoDays](https://shaisachs.github.io/ecodays/). The code, which is MIT-licensed as always, is available at [https://github.com/shaisachs/ecodays](https://github.com/shaisachs/ecodays).
 
 My goal for this project was to play around with hosting an API on Github Pages, and also to get my feet wet with React. Github Pages is an excellent hosting environment, because it's free and fast, and tightly integrated with the Github source control system I'm already using anyway. The catch is that it's also all static, so it's not really suitable to a wide range of APIs. But if you're mostly looking to provide a simple set of content by API, it can be a wonderful resource.
 
