Add link to kindle direct

--- a/_posts/2018-05-05-the-menu.md
+++ b/_posts/2018-05-05-the-menu.md
@@ -4,7 +4,7 @@ title: "The Menu: an adventure in techno-magical realism"
 date: 2018-05-05 13:30
 ---
 
-For a little while now, I've found all the popular press stories about artificial intelligence rather exhausting. They're so hyped-up, frantic, and just plain ill-informed. Eventually I got fed up enough to write a short story about the whole mess! It's called [The Menu](https://www.penflip.com/shaisachs/the-menu/), and will soon be available on Kindle Direct Publishing.
+For a little while now, I've found all the popular press stories about artificial intelligence rather exhausting. They're so hyped-up, frantic, and just plain ill-informed. Eventually I got fed up enough to write a short story about the whole mess! It's called [The Menu](https://www.amazon.com/dp/B07CYFP8M4/), and is available on Kindle Direct Publishing.
 
 The concept is straightforward but absurd: there's a mom-and-pop diner struggling to make ends meet, and so the diner injects a little artificial intelligence into its menus. Business starts booming pretty quickly, but not all is well: one of the menus falls into the wrong hands, and our plucky heroine must save the day, together with her frumpy but loving husband.
 
