Remove colons from titles
Signed-off-by: Shai Sachs <shaisachs@gmail.com>

--- a/_posts/2018-11-24-123-magic.md
+++ b/_posts/2018-11-24-123-magic.md
@@ -1,6 +1,6 @@
 ---
 layout: bookreview
-title: 1-2-3 Magic: Effective Discipline for Children 2-12
+title: 1-2-3 Magic
 date: 2018-11-24 13:00
 bookstarted: 2018-11-24
 bookfinished: 2018-11-24
