bring book reviews up to date with new layout
Signed-off-by: Shai Sachs <shaisachs@gmail.com>

--- a/_posts/2018-11-24-123-magic.md
+++ b/_posts/2018-11-24-123-magic.md
@@ -1,12 +1,12 @@
 ---
 layout: bookreview
-title: 1-2-3 Magic
+title: "1-2-3 Magic: Effective Discipline for Children 2-12"
 date: 2018-11-24 13:00
 bookstarted: 2018-11-24
 bookfinished: 2018-11-24
-bookrating: 3
-bookfullimage: https://s.gr-assets.com/assets/nophoto/book/111x148-bcc042a9c91a29c1d680899eff700a03.png
-booksmallimage: https://s.gr-assets.com/assets/nophoto/book/50x75-a91bf249278a81aabab721ef782c4a74.png
+rating: 3
+bookcoverimage: https://s.gr-assets.com/assets/nophoto/book/111x148-bcc042a9c91a29c1d680899eff700a03.png
+reviewurl: https://www.goodreads.com/review/show/2603986430
 ---
 
 This book describes quite a useful system for thinking about discipline for children. I've read a few different books on discipline for toddlers and up; this is the one which seems the most productive. I know there is some debate about the relative value and harm of "time-outs", and I can see the logic behind their critiques. I think in practice it comes down to a question of quantity and degree - rare timeouts are probably fine, and luckily this system seems to keep such punishments down to a minimum. And like many other books, it provides some sensible recommendations for reasonable and enjoyable routines that help keep punishments rare in the first place. I do think there's a bit more emphasis on incentives and rewards than I really like. I'd hope that intrinsic rewards are sufficient, but I know realistically they often aren't; still, I would have liked to see a little more discussion on that topic.
