--- a/_posts/2019-05-01-zorro.md
+++ b/_posts/2019-05-01-zorro.md
@@ -1,12 +1,12 @@
 ---
 layout: bookreview
-title: Zorro
+title: "Zorro"
 date: 2019-05-01 13:00
 bookstarted: 2019-02-22
 bookfinished: 2019-05-01
-bookrating: 3
-bookfullimage: https://s.gr-assets.com/assets/nophoto/book/111x148-bcc042a9c91a29c1d680899eff700a03.png
-booksmallimage: https://s.gr-assets.com/assets/nophoto/book/50x75-a91bf249278a81aabab721ef782c4a74.png
+rating: 3
+bookcoverimage: https://s.gr-assets.com/assets/nophoto/book/111x148-bcc042a9c91a29c1d680899eff700a03.png
+reviewurl: https://www.goodreads.com/review/show/2724930423
 ---
 
 This book is an origin story for the daredevil Western hero of TV and film acclaim. On the whole it's fun and entertaining, but it's certainly not without some devastating scenes and altogether miserable themes.
