proper name for link property

--- a/_posts/2018-05-08-the-menu.md
+++ b/_posts/2018-05-08-the-menu.md
@@ -3,7 +3,7 @@ layout: project
 title: "The Menu"
 date: 2018-05-08 13:00
 icon: book
-url: https://www.amazon.com/Menu-Shai-Sachs-ebook/dp/B07CYFP8M4
+link: https://www.amazon.com/Menu-Shai-Sachs-ebook/dp/B07CYFP8M4
 weight: 6
 ---
 
