--- a/_posts/2014-06-05-openvpb.md
+++ b/_posts/2014-06-05-openvpb.md
@@ -2,7 +2,7 @@
 layout: project
 title: "OpenVPB"
 date: 2014-06-05 13:00
-url: https://blog.ngpvan.com/openvpb-easier-way-phone-bank
+link: https://blog.ngpvan.com/openvpb-easier-way-phone-bank
 icon: bullhorn
 weight: 3
 ---
