--- a/_posts/2014-06-05-openvpb.md
+++ b/_posts/2014-06-05-openvpb.md
@@ -5,6 +5,7 @@ date: 2014-06-05 13:00
 link: https://blog.ngpvan.com/openvpb-easier-way-phone-bank
 icon: bullhorn
 weight: 3
+category: ngpvan
 ---
 
 A website which allows VAN users to easily publish virtual phone banks and distribute them to volunteers painlessly. I developed this application during NGP VAN’s first hackathon.
