Only show featured projects on front page

--- a/_projects/2018-05-08-the-menu.md
+++ b/_projects/2018-05-08-the-menu.md
@@ -5,6 +5,7 @@ icon: book
 link: https://www.amazon.com/Menu-Shai-Sachs-ebook/dp/B07CYFP8M4
 category: writing
 weight: 4
+featured: 1
 ---
 
 A short story I wrote about a preposterously powerful piece of artificial intelligence. It was an exploration into a genre I call [techno-magical realism](https://shaisachs.github.io/2018/05/05/the-menu.html).
