--- a/_projects/2014-06-05-openvpb.md
+++ b/_projects/2014-06-05-openvpb.md
@@ -5,6 +5,7 @@ link: https://blog.ngpvan.com/openvpb-easier-way-phone-bank
 icon: bullhorn
 category: career
 weight: 6
+featured: 1
 ---
 
 A website which allows VAN users to easily publish virtual phone banks and distribute them to volunteers painlessly. I developed this application during NGP VAN’s first hackathon.
