Add another row of projects

--- a/_projects/2008-05-01-nsdl.md
+++ b/_projects/2008-05-01-nsdl.md
@@ -2,8 +2,9 @@
 title: "National Science Digital Library"
 date: 2008-05-01
 link: https://nsdl.oercommons.org/
+icon: globe
 featured: 1
-weight: 45
+weight: 20
 category: other
 ---
 
