Repoint to gitbook, include images; better explanation
Signed-off-by: Shai Sachs <shaisachs@gmail.com>

--- a/_posts/2018-05-05-the-menu.md
+++ b/_posts/2018-05-05-the-menu.md
@@ -12,7 +12,7 @@ The idea, of course, is *reductio ad absurdum*: what happens if we put AI in the
 
 I would not call this story a work of science fiction, in part because I'm not much of a sci-fi fan. Moreover, I didn't go to any lengths at all to explain the technology that I've summoned out of thin air; there's barely three lines of world-building in the whole piece. Indeed, I've plainly misused the scant bits of technical jargon that I did include: in the real world, facial recognition is more about the problem of matching facial features in an image to a database of individuals, than it is about translating a real-time video feed into categorized emotions.
 
-The category I've heard which strikes me as most appropriate is "techno magical realism". That's a genre I had never heard of when I started writing this work. I love that term for a variety of reasons. First because I'm such a fan of the original magical realism movement, the works of Gabriel García Márquez and Isabel Allende in particular. Secondly, because I think there is something deeply satisfying about thinking of technology as magic. Doing so allows us to abstract away all the tricky issues around debugging code and soldering chips (or what have you), so that we may focus on our anxieties about all that magical code, and the magical chips it runs on. Third, perhaps, because I am just such a sucker for *reductio ad absurdum* reasoning, and this genre is particularly well-suited to it.
+The category I've heard which strikes me as most appropriate is "techno magical realism". The term comes from a friend of mine, Lee Baugh. That's a genre I had never heard of when I started writing this work, but I love the term for a variety of reasons. First because I'm such a fan of the original magical realism movement, the works of Gabriel García Márquez and Isabel Allende in particular. Secondly, because I think there is something deeply satisfying about thinking of technology as magic. Doing so allows us to abstract away all the tricky issues around debugging code and soldering chips (or what have you), so that we may focus on our anxieties about all that magical code, and the magical chips it runs on. Third, perhaps, because I am just such a sucker for *reductio ad absurdum* reasoning, and this genre is particularly well-suited to it.
 
 This project was also an excuse for me to try out a tool that I've been itching to use for a while now, [Penflip](https://www.penflip.com). Penflip is built on the marvelous insight that literature is a lot like code: it's a communication medium which requires social interaction and careful version control. As such, the Penflip system provides authors with user-friendly tools to track their changes using all of the powerful features of Git and Markdown. Moreover, Penflip makes it easy to socialize works in progress, whether via comments and branches, a la Github, or by exporting native Markdown text into a variety of popular formats ranging from Word to ePub. As a programmer who loves prose, I had a wonderful time using and playing around with Penflip. Readers who are so inclined may, I hope, benefit from the [source control trail](https://www.penflip.com/shaisachs/the-menu/activity) that resulted - I endeavored to make the comments reasonably descriptive and the changes nicely atomic, though I wasn't as fully consistent as I'd like. In any case, I think it's easy to see how the story evolved over time.
 
