--- a/_projects/2018-05-08-the-menu.md
+++ b/_projects/2018-05-08-the-menu.md
@@ -8,4 +8,4 @@ weight: 10
 featured: 1
 ---
 
-A short story I wrote about a preposterously powerful piece of artificial intelligence. It was an exploration into a genre I call [techno-magical realism](https://shaisachs.github.io/2018/05/05/the-menu.html).
+A short story I wrote about a preposterously powerful piece of artificial intelligence. It was an exploration into a genre I call [techno-magical realism](https://shaisachs.com/2018/05/05/the-menu.html).
