--- a/_posts/2017-01-14-GET-ahabs.md
+++ b/_posts/2017-01-14-GET-ahabs.md
@@ -5,6 +5,7 @@ date:   2017-01-14 11:00
 bannerimg: /img/posts/coffee.jpeg
 photographer: Natalie Collins
 photographerurl: https://unsplash.com/@missnjc
+tags: api
 ---
 
 
