--- a/_posts/2017-12-01-bikethet.md
+++ b/_posts/2017-12-01-bikethet.md
@@ -5,6 +5,7 @@ date:   2017-12-01 8:30
 bannerimg: /img/posts/bikethet.png
 photographer: ArtsyBee
 photographerurl: https://pixabay.com/en/users/ArtsyBee-462611/
+tags: api, sideproject
 ---
 
 I'm pleased to announce the launch of [BikeTheT](https://market.mashape.com/shaisachs/bikethet), a serverless transit API which helps Bostonians figure out whether they can bring their bike with them on the MBTA. BikeTheT was built using Azure Functions, and is available on the RapidAPI marketplace. The code is MIT-licensed, and you can check it out, or fork it, at [https://github.com/shaisachs/BikeTheT/](https://github.com/shaisachs/BikeTheT/).
