--- a/_posts/2018-04-22-ecodays.md
+++ b/_posts/2018-04-22-ecodays.md
@@ -2,13 +2,14 @@
 layout: post
 title: "EcoDays: a calendar of environmental holidays built on Github Pages and React"
 date: 2018-04-22 14:30
+tags: api, sideproject
 ---
 
 In honor of Earth Day, I thought I'd try something a little different for my newest API. This API is a calendar of environmental holidays, paired with a React app which displays them in chronological order. The result is a handy little app I call [EcoDays](https://shaisachs.com/ecodays/). The code, which is MIT-licensed as always, is available at [https://github.com/shaisachs/ecodays](https://github.com/shaisachs/ecodays).
 
 My goal for this project was to play around with hosting an API on Github Pages, and also to get my feet wet with React. Github Pages is an excellent hosting environment, because it's free and fast, and tightly integrated with the Github source control system I'm already using anyway. The catch is that it's also all static, so it's not really suitable to a wide range of APIs. But if you're mostly looking to provide a simple set of content by API, it can be a wonderful resource.
 
-The API in this project is quite simple: it's all available at `GET https://shaisachs.com/ecodays/api.json`, and it gives you a list of a few dozen holidays, including names, websites, and dates. Many of these holidays aren't fixed to a particular date of the year, but rather a position within the month - for example, Earth Hour occurs on the last Saturday of March. To accomodate these holidays, I used the iCalendar Recurrence Rule format ("rrule") for storing dates.
+The API in this project is quite simple: it's all available at `GET https://shaisachs.com/ecodays/api.json`, and it gives you a list of a few dozen holidays, including names, websites, and dates. Many of these holidays aren't fixed to a particular date of the year, but rather a position within the month - for example, Earth Hour occurs on the last Saturday of March. To accommodate these holidays, I used the iCalendar Recurrence Rule format (`rrule`) for storing dates.
 
 I briefly gave some thought to making the API answer the sort of question that the site is intended for: for a given holiday X and a date range Y - Z, when (if ever) will X occur between Y and Z? Or perhaps less arithmetically, what's the next concrete occurrence of Earth Hour? It's pretty easy to answer this question with the benefit of a server-side script which serves up the API - there are dozens of rrule libraries in any programming language you care to choose. But with Github Pages, your entire site is pre-baked into static files before it's served to a visitor, so the best you can do is to calculate this question over a fixed time range (let's say a year). In order to keep the site up to date, you'd have to do something horrendous like deploying the site every day. Instead I chose to put the burden of answering this problem on the client - who, unlike the server, has the benefit of loading up an rrule library.
 
