--- a/_posts/2018-05-05-the-menu.md
+++ b/_posts/2018-05-05-the-menu.md
@@ -2,6 +2,7 @@
 layout: post
 title: "The Menu: an adventure in techno-magical realism"
 date: 2018-05-05 13:30
+tags: prose, sideproject, techno-magical realism
 ---
 
 For a little while now, I've found all the popular press stories about artificial intelligence rather exhausting. They're so hyped-up, frantic, and just plain ill-informed. Eventually I got fed up enough to write a short story about the whole mess! It's called [The Menu](https://www.amazon.com/dp/B07CYFP8M4/), and is available on Kindle Direct Publishing.
