--- a/_posts/2021-01-16-tv-tropes.md
+++ b/_posts/2021-01-16-tv-tropes.md
@@ -3,6 +3,7 @@ layout: post
 title: "TV tropes"
 date: 2021-01-16 19:00
 excerpt_separator: <!--more-->
+tags: prose
 ---
 
 One of my favorite recent finds online is [TV Tropes](https://tvtropes.org/). It's a wiki which describes themes that are common in TV shows, but often these themes generalize to other forms of fiction. [Germans Love David Hasselhoff](https://tvtropes.org/pmwiki/pmwiki.php/Main/GermansLoveDavidHasselhoff) has implications far beyond the Baywatch star, for example. That's pretty interesting to me, since I'm fascinated by what I think of as the rules of art.
