--- a/_posts/2021-01-19-the-game.md
+++ b/_posts/2021-01-19-the-game.md
@@ -3,6 +3,7 @@ layout: post
 title: "The Game"
 date: 2021-01-19 19:30
 excerpt_separator: <!--more-->
+tags: prose, sideproject, techno-magical realism
 ---
 
 My next short story will be about chess; the title will be "The Game." As promised it'll follow a [kishōtenketsu format](https://shaisachs.com/2021/01/09/kishotenketsu.html), and there'll be a complication with an intelligent, fully-conscious smart phone. I now have a main story line, or at least the beginning of one: the main character plays [correspondence chess](https://www.chess.com/terms/correspondence-chess), or perhaps a modern variant, with a friend. There's more, I may even know what I want to say!
