--- a/_posts/2021-01-19-the-game.md
+++ b/_posts/2021-01-19-the-game.md
@@ -14,7 +14,7 @@ I've been a sharp critic of AI hype, and more to the point the dystopian, anti-h
 
 That's really what I want to drive at with this short story. The protagonist has a particular agenda in mind, and not a very ambitious one: to play correspondence chess with a friend, as a way to keep in touch. It so happens that the tool *du jour* is not a pen and paper, but a somewhat over-powered smart phone with a mind of its own. What does that mind say, and how does it impact the protagonist? That is an interesting question.
 
-Since I would hate to keep things simple, I've already decided to overburden this story with something more: I want to put it in conversation with the other short stories I've written, The Menu and The Recipe. The concept is a little hazy to me, but I want to finish out the series with a fourth story, which will be called The Check. The entire series will also follow a kishōtenketsu format, along these lines:
+Since I would hate to keep things simple, I've already decided to overburden this story with something more: I want to put it in conversation with the other short stories I've written, [The Menu](https://shaisachs.com/2018/05/05/the-menu.html) and [The Recipe](https://shaisachs.com/2020/11/29/the-recipe.html). The concept is a little hazy to me, but I want to finish out the series with a fourth story, which will be called The Check. The entire series will also follow a kishōtenketsu format, along these lines:
 
 * The Menu: introduction
 * The Recipe: development
