Announce first draft of the game
Signed-off-by: Shai Sachs <shaisachs@gmail.com>

--- a/_posts/2021-05-14-this-land.md
+++ b/_posts/2021-05-14-this-land.md
@@ -3,7 +3,7 @@ layout: post
 title: "A new stanza for This Land is Your Land"
 date: 2021-05-14 06:30
 excerpt_separator: <!--more-->
-tags: architecture
+tags: prose
 ---
 
 I've been noodling around with a new stanza for This Land is Your Land.
