--- a/_posts/2021-11-19-the-game.md
+++ b/_posts/2021-11-19-the-game.md
@@ -20,4 +20,4 @@ The third part, the non-sequitur whose drama arises from an entirely new narrati
 
 The last part, in which we resolve the harmony, was relatively quick to write but consumed a fair amount of mental energy over the last two weeks. Having set up this oddball contrast between two very different kinds of characters, I now needed to bring them into harmony. How was I to do that, and how indeed would I do that while imparting the lesson I hoped to impart?
 
-I hope that I've done so in a satisfactory way. The idea that AI is a tool, one which can enhance our thought processes but never replace them: I like to think it came across rather nicely. I hope certainly hope that the story in which this idea is enmeshed winds up being enjoyable and entertaining!
+I hope that I've done so in a satisfactory way. The idea that AI is a tool, one which can enhance our thought processes but never replace them: I like to think it came across rather nicely. I certainly hope that the story in which this idea is enmeshed winds up being enjoyable and entertaining!
