--- a/_posts/2021-11-19-the-game.md
+++ b/_posts/2021-11-19-the-game.md
@@ -18,6 +18,6 @@ The first two parts, while a little tiresome and maybe plodding, were fun and in
 
 The third part, the non-sequitur whose drama arises from an entirely new narrative voice, was in some ways the easiest to write: I found myself rather didactically writing out some of the thoughts I've had in my head about two rather disparate but important pieces of work. It was all rather prosaic, but I decided to make that third part a piece of kishōtenketsu unto itself because... why not? That was fun.
 
-The last part, in which we resolve the harmony, was relatively quick to write but consumed a fair amount of mental energy over the last two weeks. Having set up this oddball contrast between two very different kinds of characters, I now needed to bring them into harmony. How was I to do that, and how indeed would I do that while imparting the lesson I hoped to impart?
+The last part, in which we resolve the tension between the two choices, was relatively quick to write but consumed a fair amount of mental energy over the last two weeks. Having set up this oddball contrast between two very different kinds of characters, I now needed to bring them into harmony. How was I to do that, and how indeed would I do that while imparting the lesson I hoped to impart?
 
 I hope that I've done so in a satisfactory way. The idea that AI is a tool, one which can enhance our thought processes but never replace them: I like to think it came across rather nicely. I certainly hope that the story in which this idea is enmeshed winds up being enjoyable and entertaining!
