--- a/_projects/2021-11-19-the-game.md
+++ b/_projects/2021-11-19-the-game.md
@@ -4,8 +4,8 @@ date: 2021-11-19
 category: writing
 weight: 10
 featured: 1
-link: https://shaisachs.gitbook.io/the-game
+link: https://www.amazon.com/gp/product/B09PH61G4C
 icon: book
 ---
 
-A short story I wrote about correspondence chess, in the format of [kishōtenketsu](https://shaisachs.com/2021/01/09/kishotenketsu.html). Yet another piece of [techno-magical realism](https://shaisachs.com/2020/11/29/the-recipe.html). It's perhaps my most prosaic and didactic work about the limits of AI yet.
+A short story I wrote about correspondence chess, in the format of [kishōtenketsu](https://shaisachs.com/2021/01/09/kishotenketsu.html). Yet another piece of [techno-magical realism](https://shaisachs.com/2020/11/29/the-recipe.html). It's perhaps my most prosaic and didactic work about the limits of AI yet. Like my other stories, this one is [source-controlled](https://github.com/shaisachs/the-game) and available on [Gitbook](https://shaisachs.gitbook.io/the-game/).
