--- a/_posts/2022-06-21-apidays.md
+++ b/_posts/2022-06-21-apidays.md
@@ -5,4 +5,4 @@ date: 2022-06-21 21:11
 tags: api
 ---
 
-I recently spoke at APIDays Interface, a virtual conference concerned with API governance. It was a great venue to share what I learned while building out Wayfair's governance layer last summer! My talk was titled [How we built our governance layer on this thousand-year-old tech](https://youtu.be/7jRMk4pFU6k), and I think it went well! Christine Bottagaro was a great moderator, and it was fun discussing trust in the time of pandemic with her. The talk went into a little more depth on my blog post from earlier this year, [Managing Microsystems and Conway’s Law with Governance Layers and Trust](https://www.aboutwayfair.com/careers/tech-blog/managing-microsystems-and-conways-law-with-governance-layers-and-trust). I hope you get the chance to check out the talk!
+I recently spoke at [APIDays Interface](https://www.apidays.global/interface/), a virtual conference concerned with API governance. It was a great venue to share what I learned while building out Wayfair's governance layer last summer! My talk was titled [How we built our governance layer on this thousand-year-old tech](https://youtu.be/7jRMk4pFU6k), and I think it went well! Christine Bottagaro was a great moderator, and it was fun discussing trust in the time of pandemic with her. The talk went into a little more depth on my blog post from earlier this year, [Managing Microsystems and Conway’s Law with Governance Layers and Trust](https://www.aboutwayfair.com/careers/tech-blog/managing-microsystems-and-conways-law-with-governance-layers-and-trust). I hope you get the chance to check out the talk!
