--- a/_bookreviews/2021-07-07-rodham.md
+++ b/_bookreviews/2021-07-07-rodham.md
@@ -8,7 +8,7 @@ rating: 3
 
 Rodham is a piece of historical fiction that imagines how the world might have been different had Hillary Rodham not married Bill Clinton, lo these many years ago. It's a pretty entertaining read, with some rather fascinating character sketches.
 
-
+<!--more-->
 
 As a historical counter-narrative it's pretty interesting to consider. Was Hillary really instrumental to Bill's primary win in 1992, and was that decisive in defeating Bush in the general election? Perhaps, but perhaps not - the economy was a bit of a wreck that year, and it's reasonable to think that any Democrat might have won. What's more interesting is the notion that Hillary would've entered and then won the Illinois Senate race in 1992. Her credentials for public office, in this alternative narrative, were rather thin; and her aptitude for campaigning is prsented as marginal at best. In some ways this piece of the counter-narrative seems like the weakest. Most of all the book sort of sharpens the feeling that the 2016 was a real missed opportunity for the country as a whole - if anyone "should" be the first woman elected president, Hillary Clinton seems most appropriate, nevermind the whole suite of troubles that followed the real-world consequence of that election.
 
