--- a/_bookreviews/2021-08-13-god.md
+++ b/_bookreviews/2021-08-13-god.md
@@ -8,12 +8,8 @@ rating: 4
 
 This book was a completely fascinating history of the concept of monotheism, and I highly recommend it.
 
-
-
 There were a lot of pieces I particularly enjoyed, and really it pushed me to investigate a lot of ancillary topics - in some ways that's the best thing a book like this one can do!
-
-
-
+<!--more-->
 Perhaps the most interesting concept explored was politicomorphism - the notion that religions change to accomodate or reflect the forms of government which their society adopts. Hence, for instance, the animistic "lord of the beasts" of hunter-gatherer societies gives way to an agricultural pantheon of anthopomorphic gods, which each govern some aspect of the natural world. Aslan doesn't explore this topic through to moden times - indeed, the last chapter concerns Rumi, who died over seven hundred years ago - but it's easy to imagine how this concept plays out in the concept of the divine right of kings and so on. I'd be more than eager to read a book exploring this one topic in more detail.
 
 
