tighten up front page
Signed-off-by: Shai Sachs <shaisachs@gmail.com>

--- a/_bookreviews/2021-07-07-rodham.md
+++ b/_bookreviews/2021-07-07-rodham.md
@@ -4,6 +4,7 @@ title: "Rodham"
 date: 2021-07-07 13:00
 bookfinished: 2021-07-07
 rating: 3
+excerpt_separator: <!--more-->
 ---
 
 Rodham is a piece of historical fiction that imagines how the world might have been different had Hillary Rodham not married Bill Clinton, lo these many years ago. It's a pretty entertaining read, with some rather fascinating character sketches.
