songs of search
Signed-off-by: Shai Sachs <shaisachs@gmail.com>

--- a/_posts/2026-02-12-songs.md
+++ b/_posts/2026-02-12-songs.md
@@ -8,10 +8,11 @@ I've been listening to a lot of songs lately, which is great fun. But as I am wo
 
 Here is my list. You are welcome to suggest revisions!
 
-1. Fantastical fever dreams. Examples: Lookin' out my back door, The mighty quinn, Being for the benefit of Mr. Kite.
+1. Fantastical fever dreams. Examples: Lookin' out my back door, The mighty quinn, Being for the benefit of Mr. Kite, C u when u get there.
 2. Songs of national greatness. Examples: Guantanamera, American tune, 99 Luftballons, Blake's Jerusalem. Hallelujah.
 3. Doing crime. This category has only two songs, Mack the knife and Knockin' on heaven's door. But they are not to be trifled with.
 4. Homecoming. Examples: Sloop John D, Tom Traubert's blues, Auld lang syne,
+    4.1 Songs of search. During holidays and other special occasions, these are considered a sub-category of Homecoming. Examples: Sugar man, How much is that doggie in the window, Alice's restaurant.
 5. Musicals.
 6. Closer to fine. Power of two and Tangled up in blue also belong in this category. 
 7. Love songs. If your song does not fit one of the above categories, then by common consensus (as defined in this blog post), it is a love song. Examples: Day-o, The impression that I get, Vogue. Hallelujah.
